--- a/Setup/index.html
+++ b/Setup/index.html
@@ -40,7 +40,7 @@
         <button id="give-up" @click="giveUp">GIVE UP</button>
       </div>
     </section>
-    <section class="row log" v-if="gameIsRunning">
+    <section class="row log" v-if="gameIsRunning && logs.length > 0">
       <div class="small-12 columns">
         <ul>
           <li v-for="(log, index) in logs" :class="{'player-turn': index%2==0, 'monster-turn': index%2!=0}">{{log}}</li>
